k8s/mongo-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-admin
  template:
    metadata:
      labels:
        app: mongo-admin
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-admin
spec:
  selector:
    app: mongo-admin
  ports:
  - port: 27017
    targetPort: 27017
