k8s/mongo-review.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-review
  template:
    metadata:
      labels:
        app: mongo-review
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-review
spec:
  selector:
    app: mongo-review
  ports:
  - port: 27017
    targetPort: 27017
